--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
             <main class="slds-col">
                
-                <h1>welcome to your activity!</h1>
+                <h1>welcome to your second activity!</h1>
             </main>
             
 
